@@ -25,6 +25,7 @@
   * [JRuby] namespaced attributes broken when appending raw xml to builder. #770
   * [JRuby] Nokogiri::XML::Document#wrap raises undefined method `length' for nil:NilClass when trying to << to a node. #781
   * [JRuby] Fixed "bad file descriptor" bug when closing open file descriptors. #495
+  * [JRuby] JRuby/CRuby incompatibility for attribute decorators. #785
 
 
 == 1.5.5 / 2012-06-24
